tests/transpiler/x/cpp/sort_stable.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:14:17: error: template argument 1 is invalid
   14 | std::vector<auto> result = ([]{ std::vector<std::pair<int, auto>> __tmp;
      |                 ^
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:14:17: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:14:64: error: template argument 2 is invalid
   14 | std::vector<auto> result = ([]{ std::vector<std::pair<int, auto>> __tmp;
      |                                                                ^~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:14:67: error: template argument 1 is invalid
   14 | std::vector<auto> result = ([]{ std::vector<std::pair<int, auto>> __tmp;
      |                                                                   ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:14:67: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:16:9: error: ‘__tmp’ was not declared in this scope
   16 |         __tmp.emplace_back(i.n, i.v);
      |         ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:18:11: error: ‘__tmp’ was not declared in this scope
   18 | std::sort(__tmp.begin(), __tmp.end(), [](const auto& a,const auto& b){ return a.first < b.first; });
      |           ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:19:17: error: template argument 1 is invalid
   19 | std::vector<auto> __items;
      |                 ^
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:19:17: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:21:13: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   21 |     __items.push_back(__tmp[__i].second);
      |             ^~~~~~~~~
